--- a/views/cards.slim
+++ b/views/cards.slim
@@ -10,6 +10,4 @@ link rel="stylesheet" href="/styles/cards/italian/phrases.css"
 link rel="stylesheet" href="/styles/cards/japanese/words.css"
 link rel="stylesheet" href="/styles/cards/japanese/phrases.css"
 
-div.cards
-  - @cards.each do |card|
-    == card.to_html
+script src="/views/cards"
