--- a/views/root.slim
+++ b/views/root.slim
@@ -10,4 +10,4 @@ link rel="stylesheet" href="/styles/cards/italian/phrases.css"
 link rel="stylesheet" href="/styles/cards/japanese/words.css"
 link rel="stylesheet" href="/styles/cards/japanese/phrases.css"
 
-script src="/views/cards"
+script src="/views/root.rb"
