--- a/views/root.slim
+++ b/views/root.slim
@@ -1,13 +1,13 @@
 link rel="stylesheet" href="/styles/cards.css"
 
-link rel="stylesheet" href="/styles/cards/note.css"
-link rel="stylesheet" href="/styles/cards/study.css"
-link rel="stylesheet" href="/styles/cards/recipe.css"
+link rel="stylesheet" href="/styles/card/note.css"
+link rel="stylesheet" href="/styles/card/study.css"
+link rel="stylesheet" href="/styles/card/recipe.css"
 
-link rel="stylesheet" href="/styles/cards/italian/words.css"
-link rel="stylesheet" href="/styles/cards/italian/phrases.css"
+link rel="stylesheet" href="/styles/card/italian/words.css"
+link rel="stylesheet" href="/styles/card/italian/phrases.css"
 
-link rel="stylesheet" href="/styles/cards/japanese/words.css"
-link rel="stylesheet" href="/styles/cards/japanese/phrases.css"
+link rel="stylesheet" href="/styles/card/japanese/words.css"
+link rel="stylesheet" href="/styles/card/japanese/phrases.css"
 
 script src="/views/root.rb"
