--- a/views/cards.slim
+++ b/views/cards.slim
@@ -10,4 +10,4 @@ link rel="stylesheet" href="/styles/card/italian/phrases.css"
 link rel="stylesheet" href="/styles/card/japanese/words.css"
 link rel="stylesheet" href="/styles/card/japanese/phrases.css"
 
-script src="/views/root.rb"
+script src="/views/cards.rb"
