--- a/views/cards.slim
+++ b/views/cards.slim
@@ -1,4 +1,5 @@
 link rel="stylesheet" href="/styles/cards.css"
+link rel="stylesheet" href="/styles/editor.css"
 
 link rel="stylesheet" href="/styles/card/note.css"
 link rel="stylesheet" href="/styles/card/study.css"
