--- a/styles/editor.scss
+++ b/styles/editor.scss
@@ -9,9 +9,12 @@
         flex-grow: 0;
 
         select {
+            font-size: 14px;
+            font-family: sans-serif;
+
             padding-top: 4px;
-            padding-left: 6px;
-            padding-right: 6px;
+            padding-left: 4px;
+            padding-right: 4px;
             padding-bottom: 4px;
 
             border-width: 1px;
@@ -38,15 +41,18 @@
 
             resize: none;
 
+            font-size: 14px;
+            font-family: monospace;
+
             border-width: 1px;
             border-width: solid;
             border-color: hsl(0, 0%, 70%);
             border-radius: 8px;
 
-            padding-top: 6px;
+            padding-top: 8px;
             padding-left: 10px;
             padding-right: 10px;
-            padding-bottom: 6px;
+            padding-bottom: 8px;
 
             &:focus {
                 outline: none;
