--- a/styles/editor.scss
+++ b/styles/editor.scss
@@ -3,6 +3,8 @@
 
     row-gap: 10px;
 
+    padding: 16px;
+
     flex-direction: column;
 
     .type {
@@ -10,7 +12,7 @@
 
         select {
             font-size: 14px;
-            font-family: sans-serif;
+            font-family: monospace;
 
             padding-top: 4px;
             padding-left: 4px;
