--- a/styles/editor.scss
+++ b/styles/editor.scss
@@ -1,35 +1,87 @@
 .editor {
     display: flex;
 
-    row-gap: 10px;
+    row-gap: 8px;
 
     padding: 16px;
 
     flex-direction: column;
 
-    .type {
+    *::placeholder {
+        color: hsl(0, 0%, 70%);
+    }
+
+    select {
+        padding: 4px;
+
+        font-size: 14px;
+        font-family: monospace;
+
+        border-width: 1px;
+        border-style: solid;
+        border-color: hsl(0, 0%, 70%);
+        border-radius: 8px;
+
+        option {
+            color: black;
+
+            &:disabled {
+                display: none;
+            }
+        }
+
+        &:focus {
+            outline: none;
+
+            border-color: hsl(0, 0%, 50%);
+        }
+
+        &:required:invalid {
+            color: hsl(0, 0%, 70%);
+        }
+    }
+
+    .row {
+        display: flex;
+
+        column-gap: 8px;
+
         flex-grow: 0;
+        flex-direction: row;
 
-        select {
-            font-size: 14px;
-            font-family: monospace;
+        .type {
+            flex-grow: 0;
+        }
 
-            padding-top: 4px;
-            padding-left: 4px;
-            padding-right: 4px;
-            padding-bottom: 4px;
+        .attributes {
+            display: flex;
 
-            border-width: 1px;
-            border-width: solid;
-            border-color: hsl(0, 0%, 70%);
-            border-radius: 8px;
+            flex-grow: 1;
 
-            &:focus {
-                outline: none;
+            flex-direction: row;
+
+            input {
+                flex-grow: 1;
+
+                font-size: 14px;
+                font-family: monospace;
+
+                border-style: solid;
+                border-color: hsl(0, 0%, 70%);
+                border-radius: 8px;
+
+                padding-top: 4px;
+                padding-left: 6px;
+                padding-right: 6px;
+                padding-bottom: 4px;
 
                 border-width: 1px;
-                border-width: solid;
-                border-color: hsl(0, 0%, 50%);
+
+                &:focus {
+                    outline: none;
+
+                    border-color: hsl(0, 0%, 50%);
+                }
             }
         }
     }
@@ -37,19 +89,25 @@
     .text {
         flex-grow: 1;
 
+        border-width: 1px;
+        border-style: solid;
+        border-color: hsl(0, 0%, 70%);
+        border-radius: 8px;
+
+        &:has(textarea:focus) {
+            border-color: hsl(0, 0%, 50%);
+        }
+
         textarea {
             width: 100%;
             height: 100%;
 
             resize: none;
 
+            border-style: none;
+
             font-size: 14px;
             font-family: monospace;
-
-            border-width: 1px;
-            border-width: solid;
-            border-color: hsl(0, 0%, 70%);
-            border-radius: 8px;
 
             padding-top: 8px;
             padding-left: 10px;
@@ -58,10 +116,6 @@
 
             &:focus {
                 outline: none;
-
-                border-width: 1px;
-                border-width: solid;
-                border-color: hsl(0, 0%, 50%);
             }
         }
     }
