--- a/styles/cards.scss
+++ b/styles/cards.scss
@@ -174,6 +174,10 @@ body {
 
             background-color: white;
 
+            .row {
+                padding-right: 28px;
+            }
+
             .text {
                 overflow: auto;
 
