--- a/views/app.slim
+++ b/views/app.slim
@@ -1,5 +1,10 @@
+link rel="stylesheet" href="/styles/app.css"
+
+link rel="stylesheet" href="/styles/card.css"
 link rel="stylesheet" href="/styles/cards.css"
+link rel="stylesheet" href="/styles/modal.css"
 link rel="stylesheet" href="/styles/editor.css"
+link rel="stylesheet" href="/styles/sidebar.css"
 
 link rel="stylesheet" href="/styles/card/note.css"
 link rel="stylesheet" href="/styles/card/study.css"
@@ -11,4 +16,8 @@ link rel="stylesheet" href="/styles/card/italian/phrases.css"
 link rel="stylesheet" href="/styles/card/japanese/words.css"
 link rel="stylesheet" href="/styles/card/japanese/phrases.css"
 
-script src="/views/cards.rb"
+input id="binder_id" type="hidden" value=@binder_id
+
+input id="is_printed" type="hidden" value=@is_printed
+
+script src="/views/app.rb"
