Add print style

--- a/views/app.slim
+++ b/views/app.slim
@@ -1,5 +1,7 @@
 link rel="stylesheet" href="/styles/app.css"
 
+link rel="stylesheet" href="/styles/print.css"
+
 link rel="stylesheet" href="/styles/card.css"
 link rel="stylesheet" href="/styles/cards.css"
 link rel="stylesheet" href="/styles/modal.css"
