--- a/styles/card/note.scss
+++ b/styles/card/note.scss
@@ -12,11 +12,11 @@
         font-family: "Source Serif 4";
     }
 
-    h2, h3, p, ul, ol {
+    h2, h3, h4, p, ul, ol {
         margin-bottom: 4pt;
     }
 
-    h2, h3 {
+    h2, h3, h4 {
         line-height: 1;
 
         font-family: "Source Sans 3";
@@ -34,6 +34,10 @@
 
     h3 {
         font-size: 12pt;
+    }
+
+    h4 {
+        font-size: 10pt;
     }
 
     ul {
