--- a/views/app.slim
+++ b/views/app.slim
@@ -1,25 +1,22 @@
-link rel="stylesheet" href="/styles/app.css"
-
 link rel="stylesheet" href="/styles/print.css"
 
+link rel="stylesheet" href="/styles/app.css"
 link rel="stylesheet" href="/styles/card.css"
 link rel="stylesheet" href="/styles/cards.css"
 link rel="stylesheet" href="/styles/modal.css"
 link rel="stylesheet" href="/styles/editor.css"
 link rel="stylesheet" href="/styles/sidebar.css"
+link rel="stylesheet" href="/styles/toolbar.css"
 
 link rel="stylesheet" href="/styles/card/note.css"
 link rel="stylesheet" href="/styles/card/study.css"
 link rel="stylesheet" href="/styles/card/recipe.css"
-
 link rel="stylesheet" href="/styles/card/italian/words.css"
 link rel="stylesheet" href="/styles/card/italian/phrases.css"
-
 link rel="stylesheet" href="/styles/card/japanese/words.css"
 link rel="stylesheet" href="/styles/card/japanese/phrases.css"
 
+input id="print" type="hidden" value=('true' if @print)
 input id="binder_id" type="hidden" value=@binder_id
-
-input id="is_printed" type="hidden" value=@is_printed
 
 script src="/views/app.rb"
