--- a/styles/app.scss
+++ b/styles/app.scss
@@ -30,75 +30,24 @@ body {
         flex-grow: 1;
         flex-direction: column;
 
-        .toolbar {
+        .cards-view {
+            flex-grow: 1;
+        }
+
+        .toolbar-view {
             top: 0;
 
             z-index: 1;
 
-            padding: 8px;
-
-            display: flex;
-
             position: sticky;
 
-            column-gap: 8px;
-
             flex-grow: 0;
-            flex-direction: row;
-
-            justify-content: end;
 
             background-color: white;
 
             border-bottom-width: 1px;
             border-bottom-style: solid;
             border-bottom-color: hsl(0, 0%, 80%);
-
-            .button {
-                width: 36px;
-                height: 36px;
-
-                display: flex;
-
-                flex-grow: 0;
-
-                user-select: none;
-
-                align-items: center;
-
-                font-family: sans-serif;
-
-                border-width: 1px;
-                border-style: solid;
-                border-color: hsl(0, 0%, 80%);
-                border-radius: 28px;
-
-                justify-content: center;
-
-                &:hover {
-                    cursor: pointer;
-
-                    border-color: hsl(0, 0%, 70%);
-
-                    background-color: hsl(0, 0%, 95%);
-                }
-
-                &.new-button {
-                    font-size: 26px;
-                }
-
-                &.full-height-button {
-                    font-size: 18px;
-
-                    &.selected {
-                        background-color: hsl(0, 0%, 95%);
-                    }
-                }
-            }
-        }
-
-        .cards-view {
-            flex-grow: 1;
         }
     }
 
